[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="CurrentLevel" parent="." instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
